# AdversaFlowskill

./: README.md  pyproject.toml
.claude/skills/adversarial-dev-flow/: SKILL.md  run.py
src/proagent/: __init__.py  main.py
src/proagent/config/: roles.py  settings.py
src/proagent/dag/: graph.py
src/proagent/engine/: __init__.py  debate.py  judge.py
src/proagent/human/: interface.py
src/proagent/llm/: client.py  prompts.py
src/proagent/models/: blueprint.py  change.py  milestone.py  plan.py  requirements.py  state.py  unit.py
src/proagent/persistence/: store.py
src/proagent/pipeline/: base.py  conductor.py  phase1_requirements.py  phase2_planning.py  phase3_blueprint.py  phase4_development.py  phase5_closure.py  phase6_change_control.py  phase7_milestone.py
