[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proagent"
version = "0.1.0"
description = "多角色对抗式AI开发流程系统"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "networkx>=3.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.scripts]
proagent = "proagent.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
